# rtss

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  states.py
app/bot_text/: config.py  get_text.py
app/handlers/: call_supp.py  contacts.py  faq.py  obj_info.py  start.py
app/keyboards/: back.py  for_address.py  for_contacts.py  for_faq.py  for_objects.py  for_social.py  for_start.py  for_supp_conn.py
