[tool.poetry]
name = "rtss"
version = "0.1.0"
description = "Bor support for RTSS"
authors = ["Artem Stepanov <artemstepanov220505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
